les cartes jusqu au coeur

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "o-my-food-2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./SCSS/style.scss:./CSS/style.css"
@@ -15,5 +14,6 @@
   "bugs": {
     "url": "https://github.com/MissHapsa/O-MY-FOOD-2/issues"
   },
-  "homepage": "https://github.com/MissHapsa/O-MY-FOOD-2#readme"
+  "homepage": "https://github.com/MissHapsa/O-MY-FOOD-2#readme",
+  "description": ""
 }
