--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./SCSS/style.scss:./CSS/style.css"
+    "sass": "sass --watch ./SCSS/style.scss:./CSS/style.css ./SCSS/menus.scss:./CSS/menus.css"
   },
   "repository": {
     "type": "git",
